# addresses

./: .env-db  .env-tst  Dockerfile  LICENSE  app_container.sh  db_container.sh  pyproject.toml  unit.json
django_project/addresses/: admin.py  models.py  urls.py  views.py
django_project/django_project/: settings.py  urls.py
